--- a/TaskCatalogDapper/Views/_ViewImports.cshtml
+++ b/TaskCatalogDapper/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using TaskCatalogDapper
 @using TaskCatalogDapper.Models
+@using TaskCatalogDapper.Extensions
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
