--- a/TaskCatalogDapper/wwwroot/css/site.css
+++ b/TaskCatalogDapper/wwwroot/css/site.css
@@ -24,3 +24,17 @@ body {
 h1 {
     text-align: center;
 }
+
+table {
+    //background:black;
+}
+
+main {
+    //background: #171717;
+}
+
+.container {
+    width: 100%;
+    height 100%;
+    //background: #171717
+}
